# helpkey

./: README.md  TODO.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
public/keymaps/: ohmyzsh-git.json  vim.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons_src/macos/: AppIcon.icns
src-tauri/src/: main.rs  ns_panel.rs  window_info.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts  setting.service.ts
src/app/cheatsheet/: cheatsheet.component.css  cheatsheet.component.html  cheatsheet.component.ts
src/app/home/: home.component.html  home.component.ts
src/app/macos/enable-accessibility/: enable-accessibility.component.html  enable-accessibility.component.spec.ts  enable-accessibility.component.ts
src/data/keymaps/: vim.json
src/utils/: keymaps.ts
