[package]
name = "helpkey"
version = "0.1.0"
description = "Help me which key to press"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "global-shortcut-all", "window-all", "shell-open", "global-shortcut"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }


[target.'cfg(unix)'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.20.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
