[package]
name = "helpkey"
version = "0.1.0"
description = "Help me remember which keys I need to press"
authors = ["ruhendrawan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "window-show",
  "window-set-size",
  "window-hide",
  "window-set-skip-taskbar",
  "window-set-focus",
  "window-center",
  "global-shortcut-all",
  "shell-open",
  "system-tray",
  "macos-private-api",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
auto-launch = "0.4.0"
window-vibrancy = "0.3.2"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }


[target.'cfg(unix)'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22"
core-foundation = "0.9"
core-foundation-sys = "0.8"
cocoa = "0.24"
objc = "0.2"
objc_id = { version = "0.1" }
objc-foundation = { version = "0.1" }
libc = "0.2"


[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.20.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
